# kalman_robot

./: .clang-format  .gitignore  .gitmodules  LICENSE  README.md
kalman_arc/: CMakeLists.txt  README.md  package.xml  plugin.xml
kalman_arc/kalman_arc/: darkest_boulder_node.py  travel_distance_meter_node.py  tunnel_follower_node.py
kalman_arc/launch/: arc.launch.py  arc_serial.launch.py  rscp.launch.py  rscp_tcp_client.launch.py  travel_distance_meter.launch.py
kalman_arc/proto/: rscp.proto
kalman_arc/scripts/: darkest_boulder  panorama_360  rscp_tcp_serial_server.py  travel_distance_meter  tunnel_follower
kalman_arc/src/: cobs.cpp  darkest_rock_finder_node.cpp  peak_finder_node.cpp  proto_node.cpp  rqt_rscp.cpp  rqt_rscp_over_tcp.cpp  rscp_tcp_client.cpp
kalman_arc/test/: cobs_test.cpp
kalman_arc/tools/: panorama_node.py
kalman_arch/: CMakeLists.txt  package.xml
kalman_arch/kalman_arch/: cube_clouds.py  cube_saver_node.py
kalman_arch/launch/: arch.launch.py  arch2025.launch.py  cloud_raster.launch.py  cube_view.launch.py  slam_view.launch.py  travel_distance_meter.launch.py
kalman_arch/rviz/: slam_view.rviz
kalman_arch/scripts/: cube_clouds  cube_saver  travel_distance_meter
kalman_arch/src/: record_video_node.cpp  slam_serialization_node.cpp
kalman_arch/tools/: cloud_rasterizer  map_and_trajectory_bridge.py  map_and_trajectory_sender.py  map_annotator  map_annotator.py  yaml_parser
kalman_arm2/: CMakeLists.txt  README.md  package.xml
kalman_arm2/config/: panel_layout.yaml
kalman_arm2/include/: mission_state.hpp  tf_util.hpp  transform_ema_filter.hpp
kalman_arm2/kalman_arm2/: arm1_moveit_compat_node.py  gamepad_control_node.py  joint_republisher_node.py  rosbridge_client_node.py
kalman_arm2/launch/: arm2.launch.py  arm2_on_rpi.launch.py
kalman_arm2/scripts/: arm1_moveit_compat  gamepad_control  joint_republisher  rosbridge_client
kalman_arm2/src/: arm1_moveit_compat_node.cpp  bt_panel_node.cpp  gamepad_control_node.cpp  goto_joint_pose_node.cpp  ik_navigate_to_pose_action_server.cpp  joint_move_node.cpp  joint_republisher_node.cpp  mission_state.cpp  panel_layout_node.cpp  twist_ik_node.cpp  twist_ik_node.cpp.vibecoded
kalman_arm2/trees/: demo.xml
kalman_arm_controller/: CMakeLists.txt  README.md  package.xml
kalman_arm_controller/hardware/: arm_hardware.cpp
kalman_arm_controller/scripts/: extra_can_node.cpp  joystick_servo_example.cpp  planning_scene_tutorial.cpp  servo_keyboard_input.cpp  servo_publisher.cpp  twist_republisher.cpp
kalman_arm_controller/test/: can_read_test.cpp  can_write_test.cpp
kalman_arm_utils/: CMakeLists.txt  README.md  package.xml
kalman_arm_utils/kalman_arm_utils/: fake_move_server.py  pose_request_sender_node.py  servo_param_setter_node.py  trajectory_sender_node.py
kalman_arm_utils/launch/: gs.launch.py
kalman_arm_utils/scripts/: pose_request_sender  servo_param_setter  trajectory_sender
kalman_arm_utils/src/: arm_state_republisher.cpp  gripper_republisher.cpp  joint_republisher.cpp
kalman_aruco/: CMakeLists.txt  README.md  package.xml
kalman_aruco/config/: aruco_tracker.yaml
kalman_aruco/launch/: aruco.launch.py
kalman_base/: CMakeLists.txt  README.md  package.xml
kalman_base/kalman_base/: lightweight_serial_driver.py
kalman_base/scripts/: uart_ros_bridge.py
kalman_bringup/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
kalman_bringup/kalman_bringup/: __init__.py  gen_launch.py  generate_typing_hint.py  type_hints.py  utils.py
kalman_bringup/launch/: _commons.launch.py  arc_pc_nav.launch.py  arc_sim_nav_base.launch.py  arc_sim_nav_stack.launch.py  arch_gs_nav.launch.py  arch_gs_nav_rviz.launch.py  arch_pc_nav.launch.py  arch_pc_nav.py  arch_sim_nav_base.launch.py  arch_sim_nav_stack.launch.py  archvideo_gs_nav.launch.py  archvideo_pc_nav.launch.py  archvideo_sim_nav_stack.launch.py  arm_dev_sim_base.launch.py  arm_dev_sim_stack.launch.py  chll_urc_autonomy_gs.launch.py  comp_urc_autonomy_rover.launch.py  compasscal.launch.py  dyn_obj_foll_pc.launch.py  erc_autonomy_gs.launch.py  erc_autonomy_rover.launch.py  erc_autonomy_sim_base.launch.py  erc_autonomy_sim_stack.launch.py  erc_gs_nav.launch.py  erc_pc_maintenance.launch.py  erc_pc_nav.launch.py  erc_sim_nav_base.launch.py  erc_sim_nav_stack.launch.py  groundstation.launch.py  kalman.launch.py  main_gs.launch.py  rviz.launch.py  tarch_pc_nav.launch.py  tarch_slam2.launch.py  terc_autonomy_rover.launch.py  terc_pc_nav.launch.py  universaltest.launch.py  urc_autonomy_gs.launch.py  urc_autonomy_rover.launch.py  urc_autonomy_sim_base.launch.py  (+23 more)
kalman_bringup/rviz/: default.rviz  demo_rgbd.rviz  urc_autonomy.rviz
kalman_bringup/tools/: gen_type_hints
kalman_cubes/: CMakeLists.txt  package.xml
kalman_cubes/kalman_cubes/: cube_detections_node.py
kalman_cubes/launch/: detections.launch.py
kalman_cubes/scripts/: detections
kalman_cubes/src/: record_video_node.cpp
kalman_description/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
kalman_description/config/: sim_controller.yaml
kalman_description/launch/: demo_rviz_model.launch.py  description.launch.py  model.launch.py  robot_state_publisher.launch.py  sim.launch.py
kalman_description/layouts/: arm.urdf.xacro  arm_autonomy.urdf.xacro  autonomy.urdf.xacro  autonomy_90deg_cams.urdf.xacro  autonomy_science.urdf.xacro  dev_pole.urdf.xacro
kalman_description/meshes/: 102_main_body.STL  103_lidar_tower.STL  203_wheel.STL  (+2 more)
kalman_drivers/: .gitignore  CMakeLists.txt  package.xml  setup.cfg  setup.py
kalman_gazebo/: CMakeLists.txt  package.xml  setup.cfg  setup.py
kalman_gs/: CMakeLists.txt  README.md  package.xml  rosType.ts  setup.py
kalman_hardware/: CMakeLists.txt  README.md  package.xml
kalman_interfaces/: CMakeLists.txt  README.md  package.xml
kalman_mapviz/: CMakeLists.txt  package.xml  requirements.txt
kalman_master/: CMakeLists.txt  README.md  package.xml
kalman_master_driver/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
kalman_nav2/: .gitignore  CMakeLists.txt  package.xml  setup.cfg  setup.py
(+1644 files in other folders)
