<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kalman_arc</name>
  <version>0.0.0</version>
  <description>Package for ARC competition</description>
  <maintainer email="102436271+RafalS3@users.noreply.github.com">Rafal</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>ament_index_python</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>kalman_interfaces</depend>
  <depend>pluginlib</depend>
  <depend>qt_gui_cpp</depend>
  <depend>rqt_gui</depend>
  <depend>rqt_gui_cpp</depend>

  <build_depend>protobuf-dev</build_depend>
  <exec_depend>protobuf-dev</exec_depend>
  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
