<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kalman_arch</name>
  <version>0.0.0</version>
  <description>configuration + launch files for robot_localization and RTAB-Map</description>
  <maintainer email="102436271+RafalS3@users.noreply.github.com">Rafal</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>cob_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>pcl_ros</depend>
  <depend>yaml-cpp</depend>


  <exec_depend>ros2launch</exec_depend>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>python-plyfile-pip</exec_depend>
  <exec_depend>python3-tk</exec_depend>
  <exec_depend>python3-pil</exec_depend>
    
  <exec_depend>point_cloud_utils</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
