<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kalman_arm_utils</name>
  <version>1.0.0</version>
  <description>Utilities for integration and features for Kalman's arm</description>
  <maintainer email="69985093+kapi117@users.noreply.github.com">Kacper Iwicki</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>ament_cmake</depend>
  <depend>kalman_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>