<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kalman_drivers</name>
  <version>0.0.0</version>
  <description>drivers for the physical hardware; Only to be run separately from the simulation on a physical robot.</description>
  <maintainer email="63957587+rayferric@users.noreply.github.com">rayferric</maintainer>
  <license>MIT</license>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <depend>phidgets_drivers</depend> <!-- libphidget22 is required to build compasscal. -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>imu_tools</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
